# sciagent

./: .dockerignore  .env.example  .gitignore  .markdownlint-cli2.jsonc  .mcp.json  .pre-commit-config.yaml  404.html  CLAUDE.md  Dockerfile  README.md  core.md  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml  pyrightconfig.json  ruff.toml  sitemap.xml
.claude/: settings.json  settings.local.json
.claude/agents/: api-contract-guardian.md  core-planner.md  python-backend-engineer.md  sciagent-orchestrator.md  settings-bootstrap.md  verification-gate.md  zotero-addon.md  zotero-frontend.md
.claude/hooks/: protect-paths.sh  python-format.sh
.github/: copilot-instructions.md
.github/agents/: core-planner.agent.md  python-backend-engineer.agent.md  (+4 more)
actionable-plan/: index.html
actionable-plan-done/: index.html
actionable-plan-done-2/: index.html
actionable-plan-done-3/: index.html
actionable-plan-done-4/: index.html
actionable-plan-gcp/: index.html
actionable-plan-multiuser/: index.html
admin-panel/: package-lock.json  package.json  vite.config.ts
advanced-config/: index.html
api/: index.html
benchmark/: index.html
core/: index.html
deployment/: index.html
docs/: actionable-plan-done-2.md  actionable-plan-done-3.md  actionable-plan-done-4.md  actionable-plan-done.md  actionable-plan-gcp.md  actionable-plan-multiuser.md  actionable-plan.md  advanced-config.md  api.md  benchmark.md  core.md  deployment.md  index.md  install.md  keys.md  local-first.md  manual.md  next-steps.md  priorities.md  providers.md  security.md  settings.md  user-manual.md  zotero.md
examples/: README.md  __init__.py  _debug_pipeline.py  _run_all_queries.py  _shared_demo_helpers.py  keyword_extraction_demo.py  m1_foundation_demo.py  m2_6_fallback_demo.py  m2_7_benchmark.py  m2_7_search_plan_demo.py  m2_retrieval_demo.py  m3_write_correctness_demo.py  m4_approval_flow_demo.py  m5_hardening_demo.py  m6_zotero_addon_demo.py  search.py
hosted-demo-guide/: index.html
install/: index.html
keys/: index.html
local-first/: index.html
manual/: index.html
next-steps/: index.html
priorities/: index.html
providers/: index.html
scripts/: bootstrap_registry.py  deploy.sh  new_provider.py
search/: search_index.json
security/: index.html
settings/: index.html
tests/: conftest.py  test_admin_endpoints.py  test_api.py  test_arxiv_api.py  test_auth.py  test_author_resolver.py  test_base_search.py  test_baseline_providers.py  test_capabilities.py  test_citation_expander.py  test_cli.py  test_collection_inspector.py  test_comms.py  test_config.py  test_core_ac.py  test_credential_redaction.py  test_crossref.py  test_depth_profiles.py  test_dimensions.py  test_e2e_m4_happy_path.py  test_europe_pmc.py  test_example_shared_demo_helpers.py  test_explain_missing.py  test_gap_finder.py  test_google_scholar.py  test_guardrails.py  test_key_validator.py  test_keyword_extractor.py  test_library_doctor.py  test_m2_7_benchmark.py  test_mcp_server.py  test_merge.py  test_models.py  test_openalex.py  test_opencitations.py  test_pdf_attach.py  test_preflight.py  test_provider_snapshots.py  test_providers.py  test_pubmed.py  (+23 more)
user-manual/: index.html
zotero/: index.html
zotero-addon/: README.md  biome.jsonc  bootstrap.js  chrome.manifest  manifest.json  package-lock.json  package.json  preferences.xhtml  prefs.js  sciagent-panel.html  sciagent-panel.xhtml  tsconfig.json  update.rdf
(+199 files in other folders)
