[project]
name = "sciagent"
version = "0.1.0"
description = "AGT paper search and Zotero workflow agent"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "anyio>=4.6.0",
  "fastapi>=0.116.0",
  "httpx>=0.28.0",
  "langgraph>=0.2.0",
  "langsmith",
  "mcp[cli]>=1.0.0",
  "pydantic>=2.6",
  "pydantic-settings>=2.6",
  "pyspellchecker>=0.8.1",
  "pyzotero",
  "responses",
  "semanticscholar",
  "slowapi>=0.1.9",
  "streamlit>=1.40",
  "structlog",
  "tenacity",
  "uvicorn>=0.33.0",
  "vcrpy"
]

[project.scripts]
sciagent-server = "agt.server:main"

[project.optional-dependencies]
keywords = [
  "keybert>=0.8.5",
  "sentence-transformers>=3.0.0"
]
spell = [
  "pyspellchecker>=0.8.1"
]
rerank = [
  "sentence-transformers>=3.0.0"
]

[dependency-groups]
dev = [
  "mkdocs>=1.6.0",
  "mkdocs-material>=9.5.0",
  "pre-commit",
  "pyinstaller>=6.0",
  "pyright",
  "pytest",
  "pytest-asyncio",
  "pytest-vcr",
  "ruff"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.uv]
package = true
